--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/ico" href="img/favicon.ico">
-    <title>Alexander</title>
+    <title>Rossy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="row justify-content-center ">
                 <div class="col-md-8 py-5 text-white text-center">
-                    <h1 class="display-4">Build robust landing pages now</h1>
+                    <h1 class="display-4">curso de GIT & GITHUB</h1>
                     <p class="my-4 home-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quia
                         sequi eius. Quas, totam aliquid. Repudiandae reiciendis vel excepturi ipsa voluptate dicta!</p>
                     <a class="btn btn-primary p-3 me-1 my-2" href="#" role="button">Get Started </a>
